# notepad

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.planning/: PROJECT.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  state.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  page.py  refresh_token.py  user.py
backend/app/repositories/: __init__.py  note.py  refresh_token.py  user.py
backend/app/routers/: __init__.py  auth.py  notes.py
backend/app/schemas/: __init__.py  note.py  token.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_health.py  test_notes.py  test_notes_durability.py  test_notes_isolation.py  test_schema_smoke.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: AppShell.tsx  AppShellPlaceholder.tsx  AuthGate.tsx  RequireAuth.tsx  UserMenu.tsx
frontend/src/features/auth/: LoginPage.test.tsx  LoginPage.tsx  RegisterPage.tsx  schema.ts  useAuthMutations.ts
frontend/src/features/notes/: DeleteNoteDialog.tsx  NoteEditor.tsx  NoteEmptyState.tsx  NoteList.tsx  queries.ts  useAutosave.test.ts  useAutosave.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/stores/: auth.ts  ui.ts
