[project]
name = "notepad-backend"
version = "0.1.0"
description = "Notepad backend API (FastAPI)"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.138.*",
    "uvicorn[standard]==0.49.*",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.*",
    "alembic==1.18.*",
    "pydantic==2.13.*",
    "pydantic-settings==2.14.*",
    "pwdlib[argon2]==0.3.*",
    "pyjwt==2.13.*",
    "slowapi",
    "gunicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
